--- a/translations/en.json
+++ b/translations/en.json
@@ -86,7 +86,8 @@
     "error_credentials": "Incorrect username or password",
     "error_username_taken": "That username is already taken",
     "error_no_username": "Missing username / email",
-    "error_no_password": "Missing password"
+    "error_no_password": "Missing password",
+    "error_internet": "No internet connection"
   },
   "inat_signup": {
     "welcome": "Welcome to Seek!",
