New Crowdin updates (#405)
* New translations en.json (Chinese Traditional)

* New translations en.json (Chinese Traditional)

* New translations en.json (Chinese Traditional)

* New translations en.json (Spanish)

* New translations en.json (Catalan)

* New translations en.json (Chinese Traditional)

* New translations en.json (Dutch)

* New translations en.json (Danish)

* New translations en.json (Danish)

* New translations en.json (Chinese Simplified)

* New translations en.json (Portuguese)

* New translations en.json (Russian)

* New translations en.json (Serbian (Cyrillic))

* New translations en.json (Turkish)

* New translations en.json (Ukrainian)

* New translations en.json (Vietnamese)

* New translations en.json (Norwegian)

* New translations en.json (Portuguese, Brazilian)

* New translations en.json (Indonesian)

* New translations en.json (Hindi)

* New translations en.json (English, United States)

* New translations en.json (Welsh)

* New translations en.json (Polish)

* New translations en.json (Chinese Traditional)

* New translations en.json (Romanian)

* New translations en.json (Spanish)

* New translations en.json (Arabic)

* New translations en.json (Korean)

* New translations en.json (Greek)

* New translations en.json (Finnish)

* New translations en.json (Hebrew)

* New translations en.json (Hungarian)

* New translations en.json (Italian)

* New translations en.json (Japanese)

* New translations en.json (Kannada)

* New translations en.json (Catalan)

* New translations en.json (Italian)

* New translations en.json (Italian)

--- a/translations/zh-TW.json
+++ b/translations/zh-TW.json
@@ -18,7 +18,7 @@
   },
   "challenges_card": {
     "header": "挑戰",
-    "join": "參加全球觀察挑戰並在Netflix上跟大家一起追蹤！",
+    "join": "使用 Seek 的相機新增觀察紀錄來贏得 Our Planet 徽章！",
     "take_challenge": "參加挑戰",
     "continue_challenge": "繼續挑戰",
     "view_all": "查看所有挑戰",
@@ -188,7 +188,7 @@
     "not_started": "未開始",
     "completed": "已完成",
     "challenge": "挑戰",
-    "badge": "獎牌",
+    "badge": "徽章",
     "connectivity": "連線挑戰",
     "biodiversity": "生物多樣性挑戰",
     "productivity": "群落挑戰",
@@ -199,7 +199,7 @@
     "ice": "氣候挑戰",
     "badge_name_april": "連線徽章",
     "badge_name_may": "生物多樣性徽章",
-    "badge_name_june": "社區徽章",
+    "badge_name_june": "群落徽章",
     "badge_name_august": "草原徽章",
     "badge_name_september": "淡水徽章",
     "badge_name_october": "公海徽章",
@@ -207,7 +207,7 @@
     "badge_name_december": "氣候徽章",
     "op": "我們的星球",
     "start_now": "立刻開始",
-    "mission_1_april": "尋找20種新物種！",
+    "mission_1_april": "尋找 10 種新物種！",
     "april_description": "我們在這行星上並不孤單！不論有沒有注意到，野生生物就在我們的週遭。在我們家裡、花園、城鎮中都隱藏著微觀世界等著我們去發覺。在你家內外四處尋找，你可能會驚奇的發現很多野生鄰居。\n \n搜尋植物、菌類、昆蟲、鳥類與動物。更小心注意有沒有更神秘的生物的糞便、毛髮、巢穴、蹤跡以及殘網，這些都可能是跟你共享一個家的生物留下的提示。",
     "start_challenge": "開始挑戰",
     "open_camera": "開啟相機",
@@ -256,9 +256,9 @@
     "mission_3_june": "找出 2 種不同的蛛形綱動物、螳螂或食肉哺乳動物（食肉動物）",
     "mission_4_june": "找出 2 種真菌（分解者）",
     "mission_1_november": "找尋下列類型的任十種不同的樹木或灌木：\n\n- 松樹，松柏類植物，紅豆杉和羅漢松；\n- 棕櫚科植物；\n- 山毛櫸(殼斗科植物)，胡桃、橡樹；\n- 楓樹，七葉樹，芒果，桃花心木和柑橘類植物；\n- 冬青；\n- 花楸；\n- 櫻桃，蘋果和梨；\n- 朴樹、白楊、鵝掌楸和柳樹；\n- 月桂，酪梨，山胡椒和檫樹；\n- 榆樹；\n- 鼠李和美洲茶；\n- 榕屬植物和桑樹；\n- 紅樹林植物；\n- 使君子屬植物；\n- 四照花，八仙花和喜樹",
-    "mission_1_august": "找出 10 种不同的昆蟲",
-    "mission_1_september": "從以下各項找出 10 种不同的物种：蜻蜓、兩棲動物、魚類、鴨子、蘚類、蕨類、睡蓮、球莖苔草或香蒲",
-    "mission_1_october": "找出 5 种鳥類",
+    "mission_1_august": "找出 10 種不同的昆蟲",
+    "mission_1_september": "找出下列 10 種不同的物種：蜻蜓、兩棲動物、魚類、鴨子、苔蘚、蕨類、睡蓮、蘆葦或香蒲",
+    "mission_1_october": "找出 5 種鳥類",
     "mission_1_december": "找到 20 種植物",
     "photographer_april": "照片 © Netflix / Silverback Films",
     "photographer_may": "照片 © Huw Cordey, Netflix / Silverback Films",
@@ -275,7 +275,7 @@
   },
   "results": {
     "observed_species": "你已觀察到新的物種！",
-    "learn_more": "更加深入了解本物種，其棲息/生長地以及其他資訊！",
+    "learn_more": "已新增至您的觀察記錄。\n在這裡了解更多有關此物種的資訊：",
     "learn_more_no_location": "在這裡可以學習到更多關於此物種的資訊：",
     "view_species": "檢視物種",
     "back": "回到AR相機",
@@ -342,13 +342,13 @@
     "scan_class": "試著用不同的角度直到您能鑑定到種的階層！",
     "scan_genus": "快要鑑定到種的階層了！",
     "scan_species": "就是它了！現在拍一張照片把這個物種加到您的觀察紀錄中。",
-    "kingdom": "領域",
-    "phylum": "生物分類門",
-    "class": "類別",
-    "order": "順序",
+    "kingdom": "界",
+    "phylum": "門",
+    "class": "綱",
+    "order": "目",
     "family": "科",
-    "genus": "屬名",
-    "species": "物种",
+    "genus": "屬",
+    "species": "種",
     "error_permissions": "我們需要存取相機權限才能幫助您鑑定物種！",
     "error_gallery": "我們需要存取您的膠卷才能儲存您拍攝的照片！",
     "permissions": "在設定中啟用權限",
@@ -356,7 +356,7 @@
     "error_classifier": "很抱歉，我們無法載入分類器",
     "error_camera": "很抱歉，我們無法開啟相機",
     "error_device": "很抱歉，您使用的裝置並不支援",
-    "error_take": "很報前，我們無法儲存您的照片",
+    "error_take": "很抱歉，我們無法獲取您的照片",
     "error_photos": "在相簿中找不到任何照片。試著選擇不同的相簿看看。",
     "error_version": "探索的 AR 照相機需要 iOS 11.0 以上的版本。您的裝置執行的 OS 版本為 {{OS}}。",
     "error_cameraManager": "抱歉，無法載入相機管理",
@@ -558,7 +558,7 @@
     "seek": "Seek 由 iNaturalist 團隊創建。",
     "joint_initiative": "iNaturalist 是加州科學院與美國國家地理學會之間的共同專案。",
     "original": "「探索」原先是由 HHMI Tangled Bank Studios 支援下所打造的 app，然後獲得 Netflix 上我們的星球(Our Planet)和世界野生動物基金會(WWF)進一步的支持。",
-    "designed_by": "由以下 iNaturalist 團隊成員設計和開發：:",
+    "designed_by": "由以下 iNaturalist 團隊成員設計和開發：",
     "inat_team_credits": "Abhas Misraraj、Amanda Bullington、Alex Shepard、Scott Loarie、Ken-ichi Ueda、Carrie Seltzer、Tony Iwane、Patrick Leary 和 Yaron Budowski。特別感謝 Visipedia 的 Grant Van Horn 在電腦視覺技術上的協助，以及 iNaturalist 社群。",
     "version": "版本",
     "help": "需要「探索」的協助和說明，請 email 到 help+seek@inaturalist.org",
@@ -591,8 +591,8 @@
     "kelp": "海帶、矽藻及相關生物"
   },
   "posting_status": {
-    "posting_to_inat_background": "在後臺中上傳到 INATURALIST",
-    "posting_to_inat_background_description": "當 Seek 開啟時，會在後台繼續向 iNaturalist 上傳。\n\n您可以在主螢幕上檢查上傳狀態。",
+    "posting_to_inat_background": "在後臺上傳到 INATURALIST",
+    "posting_to_inat_background_description": "當 Seek 開啟時，會在後臺繼續向 iNaturalist 上傳。\n\n您可以在主螢幕上檢查上傳狀態。",
     "no_internet": "沒有網路！",
     "no_internet_description": "您的觀察結果尚未上傳到 iNaturalist，因為您未連上網際網路。\n\n一旦您連上網際網路，您就可以從主螢幕上傳您的觀察結果。"
   },
@@ -672,7 +672,7 @@
     "seasonality": "季節性",
     "seasonality_option_1": "根據全球的 iNaturalist 觀察紀錄來顯示季節性",
     "seasonality_option_2": "根據我目前位置附近的 iNaturalist 觀察紀錄來顯示季節性（接近我位置附近沒有出現的物種則不會顯示季節性）",
-    "donate_ios": "請點選下列網址來捐款給 Seek："
+    "donate_ios": "請到下列網址來捐款給 Seek："
   },
   "seek_challenges": {
     "badge": "Seek 徽章",
@@ -753,7 +753,7 @@
     "saved_to_photo_library": "已儲存至相簿中",
     "back_to_id": "返回到辨識",
     "error_title": "無法儲存照片",
-    "error": "請再次確認您已安裝了 Facebook app。",
+    "error": "請再次確認您是否安裝了 Facebook 應用程式。",
     "adjust_square_crop": "裁切成正方形",
     "crop_image": "裁切圖片"
   },
@@ -765,15 +765,15 @@
     "mar_2021_photographer": "圖片來源：Tom Matthews / 國家地理",
     "mar_2021_badge_name": "自然徽章",
     "apr_2021_mission_1": "找出任意 2 種軟體動物（貝類、蛞蝓、蝸牛、石鱉）或甲殼類動物（藤壺、螃蟹、龍蝦、鼠婦）",
-    "apr_2021_mission_2": "尋找六種植物",
-    "apr_2021_mission_3": "尋找兩種真菌",
+    "apr_2021_mission_2": "找到 6 種植物",
+    "apr_2021_mission_3": "找到 2 種真菌",
     "apr_2021_challenge_name": "復育與復原挑戰",
     "apr_2021_description": "氣候變遷、物種消失與塑膠污染是目前我們地球上所面臨到三個最大的挑戰，這些都是因為人為活動所導致。今年地球日(四月22日)的主題是「復育我們的地球」。我們大家都需要一起合作來建立一個對人類社會和野生生物更永續的未來—您個人的行動可以幫助我們來改變世界！",
     "apr_2021_action": "人類對於生態系最廣泛的影響之一為垃圾。當您在這個月探索自然時，留意一下您所看到的垃圾並思考它們可能的來源。列出一份您在家中可減少家庭產生廢棄物的清單，然後和您其他的家人分享這份清單— 並在 Twittter 上使用 #NatGeoSeekChallenge 標籤與我們分享！",
     "apr_2021_badge_name": "復育徽章",
     "apr_2021_photographer": "圖片來源：Enric Sala / 國家地理",
     "may_2021_mission_1": "從下面科別中找尋任五種植物：\n\n菊科 (例：向日葵、雛菊、紫菀和近似的種類等)；\n豆科 (例：黃豆等豆類植物)；\n唇形科 (例：薄荷、仙草)；\n爵床科 (例：爵床)；\n錦葵科 (例：錦葵和朱槿)；\n紫葳科 (例：風鈴木)；\n西番蓮科 (例：百香果)\n\n",
-    "may_2021_mission_2": "尋找兩種節肢動物 (昆蟲、蜘蛛、甲殼類)",
+    "may_2021_mission_2": "找到 2 種節肢動物 (昆蟲、蜘蛛、甲殼類)",
     "may_2021_challenge_name": "健康生態系挑戰",
     "may_2021_description": "健康的生態系統為我們提供了各種不同的好處，包括洗滌我們的水和空氣、儲存碳元素以及為生物多樣性提供棲息地。某些物種，例如地衣、苔蘚和蜻蛉目（蜻蜓和豆娘）是生態健康的指標。當您看到這些物種時是個好預兆，因為您的生態系統很健康！",
     "may_2021_action": "健康的生態系統對我們自己的健康和福利有很大的好處。在大自然中度過的時光可以幫助人們紓解壓力，改善他們的情緒並讓思維更清晰。在大自然中找一個寧靜的地方，花一個小時專注在您周圍的風景、聲音、氣味和質地。寫下一些您的觀察結果。在大自然中度過的這段時光讓您有什麼感受？在 Twitter 上使用 #NatGeoSeekChallenge 標籤分享您的照片吧！",
@@ -809,7 +809,7 @@
     "get_started_by_downloading_inat": "透過下載安裝 iNaturalist 應用程式或瀏覽 inaturalist.org 來開始。\n\n已經有 iNaturalist 帳戶了嗎？使用您現有的帳戶登入 Seek！ ",
     "we_think_youll_like_inat": "我們認為您會非常喜歡 iNaturalist。",
     "sign_out": "登出 iNaturalist",
-    "log_in_to_post_observations": "登入以將您在 Seek 上的觀察結果發佈到 iNaturalist！",
+    "log_in_to_post_observations": "登入以將您在 Seek 上的觀察結果上傳到 iNaturalist！",
     "log_in_with_inat": "使用 INATURALIST 登錄",
     "use_inat_to": "使用 INATURALIST 來： ",
     "inat_vs_seek": "INATURALIST VS SEEK",
@@ -835,10 +835,10 @@
       "many": "{{count}} 筆從 Seek 發佈到 iNaturalist 的觀察紀錄",
       "other": "{{count}} 筆從 Seek 發佈到 iNaturalist 的觀察紀錄"
     },
-    "logged_in_bullet_1": "您可以在使用 Seek 觀察完後點選「發佈到 iNaturalist 」將觀察結果發佈到 iNaturalist",
+    "logged_in_bullet_1": "您可以在使用 Seek 觀察完後點選「上傳到 iNaturalist 」將觀察結果上傳到 iNaturalist",
     "logged_in_bullet_2": "使用 iNaturalist 的應用程式或網站查看關於您觀察記錄的辨識、評論和其他活動的通知",
-    "logged_in_bullet_3": "您的 Seek 觀察紀錄沒有備份到愛自然(iNaturalist)上。刪除 Seek 將會刪除所有您在此裝置上所有的觀察紀錄。",
-    "upload_and_track_obs_using_inat": "上傳並使用愛自然(iNaturalist) app 來追蹤您的觀察紀錄。\n\n謝謝成為這個社群中的一員！",
+    "logged_in_bullet_3": "您的 Seek 觀察紀錄不會備份到 iNaturalist 上。刪除 Seek 將會刪除您在此裝置上的所有觀察紀錄。",
+    "upload_and_track_obs_using_inat": "使用 iNaturalist 應用程式或到 inaturalist.org 網站上傳和追蹤您的觀察記錄。\n\n 感謝您成為這個社區的一分子！",
     "x_seen_by_user": "{{speciesName}}由{{user}}發現"
   },
   "seek_2021_challenges": {
@@ -852,7 +852,7 @@
     "september_2021_action": "最近在您附近是否出現過極端天氣？植物、動物和真菌們如何應對？試著找出您所在地區過去這個月的天氣資料。看看發生了什麼變化，您認為這可能對生活在那裡的生物產生什麼影響？",
     "october_2021_challenge_name": "蛛形綱挑戰",
     "october_2021_mission_1": "尋找 4 種蛛形綱動物",
-    "october_2021_description": "您知道不是所有蛛形綱的動物都是蜘蛛嗎？除了蜘蛛之外，蟎蟲和蜱蟲、盲蛛（也被稱為「長腿爸爸」），甚至是極小、容易被忽略的擬蠍都可以在任何有人居住的大陸上找到。其他鮮為人知的蛛形綱動物像是蝎子、鞭蠍、無尾鞭蠍和避日蛛通常會在世界上較溫暖及/或較乾燥的地區被發現。",
+    "october_2021_description": "您知道不是所有蛛形綱的動物都是蜘蛛嗎？除了蜘蛛之外，蟎蟲和蜱蟲、盲蛛（也被稱為「長腿爸爸」），甚至是極小、容易被忽略的擬蠍都可以在任何有人居住的大陸上找到。其他鮮為人知的蛛形綱動物像是蝎子、鞭蠍、無尾鞭蠍和避日蛛通常會在世界上較溫暖或較乾燥的地區被發現。",
     "october_2021_action": "思考一下您發現的蛛形綱動物們。您會如何描述牠們的棲息地？牠們在同一棲息地被發現的嗎？",
     "november_2021_challenge_name_flight_challenge": "飛行挑戰",
     "november_2021_mission_1": "在這些群體中找到 5 個物種：\n\n-鳥類（不會飛的群體除外）；\n有翅膀和曾經有翅膀的昆蟲 ",
@@ -865,7 +865,7 @@
   },
   "seek_2022_challenges": {
     "january_2022_challenge_name_vertebrate_water": "水域脊椎動物掠食者挑戰",
-    "january_2022_mission_1": "找出下列 2 種脊椎動物：\n\n-鯨下目（鯨魚和海豚）；\n-鰭足亞目（海象、海豹、海獅）；\n-水獺亞科（水獺）；\n-輻鰭魚綱（輻鰭魚）；\n-板鰓亞綱（鯊魚和鰩魚）；\n-鵜形目（鵜鶘、鷺、䴉等）；\n-佛法僧目（翠鳥等）；\n-鷉形目 (鸊鷉);\n-鰹鳥目（塘鵝、鸕鶿等）；\n-企鵝目（企鵝）",
+    "january_2022_mission_1": "找出下列 2 種脊椎動物：\n\n-鯨下目（鯨魚和海豚）；\n-鰭足亞目（海象、海豹、海獅）；\n-水獺亞科（水獺）；\n-輻鰭魚綱（輻鰭魚）；\n-板鰓亞綱（鯊魚和鰩魚）；\n-鵜形目（鵜鶘、鷺、䴉等）；\n-佛法僧目（翠鳥等）；\n-鷉形目（鸊鷉）；\n-鰹鳥目（塘鵝、鸕鶿等）；\n-企鵝目（企鵝）",
     "january_2022_description_mammals_fishes_birds": "哺乳類、魚類和鳥類中都有一些能夠在鹹水（海洋）以及適應在淡水（河流、湖泊和溪流）中狩獵的物種。牠們都適應了在水中探測、捕獲和食用獵物。",
     "january_2022_action_water_habitat": "您拜訪過哪些類型的水域棲息地？ 掠食者可以在那裡捕獲哪些類型的獵物？",
     "february_2022_challenge_name_life_on_edges": "邊緣上的生命挑戰",
