--- a/translations/it.json
+++ b/translations/it.json
@@ -772,7 +772,7 @@
     "apr_2021_action": "Uno dei più diffusi impatti dell'uomo sugli ecosistemi sono i rifiuti. Mentre esplori la natura, questo mese, fa attenzione ai rifiuti che vedi e pensa a da dove potrebbero venire. Fai un elenco di cose che potresti fare a casa per ridurre i rifiuti generati dalla tua famiglia e condividilo con loro e con noi usando #NatGeoSeekChallenge su Twitter!",
     "apr_2021_badge_name": "Distintivo di Ripristino",
     "apr_2021_photographer": "Foto di: Enric Sala / National Geographic",
-    "may_2021_mission_1": "Trova 5 piante qualsiasi da una delle famiglie:\n\nAsteracee (Girasoli, Gigli, Astri e Affini);\nFabacee (Legumi);\nLamiaceae (Famiglia della Menta);\nAcantacee (Famiglia dell'Acanto e del Caprifoglio);\nMalvacee (Famiglia dell'Ibisco e della Malva);\nBignoniacee (Famiglia della Bignonia);\nPassifloracee (Famiglia della Maracujá).",
+    "may_2021_mission_1": "Trova 5 piante qualsiasi da una delle famiglie:\n\nAsteracee (Girasoli, Gigli, Astri e Affini);\nFabacee (Legumi);\nLamiaceae (Famiglia della Menta);\nAcantacee (Famiglia dell'Acanto);\nMalvacee (Famiglia dell'Ibisco e della Malva);\nBignoniacee (Famiglia della Bignonia);\nPassifloracee (Famiglia della Maracujá).",
     "may_2021_mission_2": "Trova 2 artropodi (insetti, aracnidi, crostacei)",
     "may_2021_challenge_name": "Sfida degli Ecosistemi Sani",
     "may_2021_description": "Gli ecosistemi sani ci forniscono di molti benefici diversi, inclusa la pulizia delle nostre acqua e dell'aria, stoccaggio di carbonio e fornire habitat a supporto della biodiversità. Alcune specie, come licheni, muschi e odonati (libellule e damigelle) sono note per esser indicatori di salute ecologica. Quando vedi queste specie, è un buon segno che il tuo ecosistema sia sano!",
@@ -864,13 +864,13 @@
     "december_2021_action_think_about_predators": "Pensa ai predatori che hai osservato. Quali adattamenti devono possedere per essere bravi a cacciare e uccidere le prede? Le due specie che hai visto hanno adattamenti simili per la predazione?"
   },
   "seek_2022_challenges": {
-    "january_2022_challenge_name_vertebrate_water": "Vertebrate Water Predator Challenge",
-    "january_2022_mission_1": "Find 2 species of vertebrates from:\n\n-Infraorder Cetacea (Whales and Dolphins);\n-Parvorder Pinnipedia (Walrus, Seals, Sea Lions);\n-Subfamily Lutrinae (Otters);\n-Class Actinopterygii (Ray-finned Fishes);\n-Class Elasmobranchii (Sharks and Rays);\n-Order Pelecaniformes (Pelicans, Herons, Ibises, and Allies);\n-Order Coraciiformes (Kingfishers and Allies);\n-Order Podicipediformes (Grebes);\n-Order Suliformes (Gannets, Cormorants, and Allies);\n-Order Sphenisciformes (Penguins)",
-    "january_2022_description_mammals_fishes_birds": "Mammals, fishes, and birds all have some species that are able to hunt prey in saltwater (oceans and seas) and some adapted to freshwater (rivers, lakes, and streams). They all have adaptations to detect, capture, and consume prey in the water.",
-    "january_2022_action_water_habitat": "What type of water habitat did you visit? What types of prey animals are available there for predators to eat?",
-    "february_2022_challenge_name_life_on_edges": "Life on the Edges Challenge",
-    "february_2022_mission_1": "Find 2 species in these groups:\n\n-Class Amphibia (Amphibians);\n-Order Charadriiformes (Shorebirds and Allies)",
-    "february_2022_description_transitions_between_habitats": "Transitions between one kind of habitat and another can be exciting places to find wildlife, and some species rely on them. The edges of ponds, lakes, rivers, and the intertidal zones are full of life. Many edge species may live part of their life in water and part on land.",
-    "february_2022_action_which_species_excited": "Which species were you most excited to find? Based on what you observed about it and additional research about it, make a list of 3 things that it needs to survive and 3 things you can do to support those needs."
+    "january_2022_challenge_name_vertebrate_water": "Sfida dei Predatori Acquatici Vertebrati",
+    "january_2022_mission_1": "Trova 2 specie di vertebrati da:\n\n-Infraordine Cetacea (Balene e Delfini);\n-Parvordine Pinnipedia (Trichechi, Foche, Leoni Marini);\n-Sottofamiglia Lutrinae (Lontre);\n-Classe Actinopterygii (Pesci a pinna);\n-Classe Elasmobranchii (Squali e Razze);\n-Ordine Pelecaniformes (Pellicani, Aironi, Ibis ed Affini);\n-Ordine Coraciiformes (Martin pescatori ed Affini);\n-Ordine Podicipediformes (Svassi);\n-Ordine Suliformes (Sule, Cormorani ed Affini);\n-Ordine Sphenisciformes (Pinguini)",
+    "january_2022_description_mammals_fishes_birds": "I mammiferi, i pesci e gli uccelli hanno tutte alcune specie in grado di cacciare le prede in acqua salata (oceani e mari) e alcune adatte all'acqua dolce (fiumi, laghi e ruscelli). Tutti hanno adattamenti per rilevare, catturare e consumare prede in acqua.",
+    "january_2022_action_water_habitat": "Che tipo di habitat acquatico hai visitato? Quali tipi di animali preda sono disponibili per i predatori da mangiare?",
+    "february_2022_challenge_name_life_on_edges": "Sfida della Vita ai Limiti",
+    "february_2022_mission_1": "Trova 2 specie in questi gruppi:\n\n-Classe Amphibia (Anfibi);\n-Ordine Charadriiformes (Trampolieri e Affini)",
+    "february_2022_description_transitions_between_habitats": "Le transizioni tra un tipo di habitat e un altro possono essere luoghi entusiasmanti per trovare la fauna selvatica, e alcune specie si affidano a loro. I bordi degli stagni, dei laghi, dei fiumi e delle zone intertidali sono pieni di vita. Molte specie di transizione possono vivere parte della loro vita in acqua e parte sulla terra.",
+    "february_2022_action_which_species_excited": "Quale specie sei stato più entusiasta di trovare? Sulla base di ciò che hai osservato e di ulteriori ricerche, fai un elenco di 3 cose di cui ha bisogno di sopravvivere e 3 cose che si possono fare per favorire tali esigenze."
   }
 }
