New Crowdin updates (#407)
* New translations en.json (Chinese Traditional)

* New translations en.json (Indonesian)

* New translations en.json (Indonesian)

--- a/translations/id.json
+++ b/translations/id.json
@@ -664,7 +664,7 @@
     "scientific_names": "Tampilkan Nama Ilmiah",
     "donate": "Sumbang",
     "donate_header": "Bantu dukung iNaturalist",
-    "donate_description": "Menikmati Seek? Menyumbanglah ke iNaturalist! Kami tergantung pada donasi dari orang-orang sepertimu untuk tetap menyediakan aplikasi secara gratis.",
+    "donate_description": "Menikmati Seek? Menyumbanglah ke iNaturalist! Kami bergantung pada donasi dari orang-orang sepertimu supaya tetap bisa menyediakan aplikasi secara gratis.",
     "language": "Bahasa aplikasi",
     "device_settings": "Gunakan pengaturan bahasa dari perangkat",
     "auto_capture": "Ambil gambar secara otomatis ketika proses identifikasi telah menemukan spesies.",
@@ -819,10 +819,10 @@
     "inat_bullet_3": "Komunitas iNaturalist membantu mengidentifikasi dan mengonfirmasi pengamatan",
     "seek_is_an_id_app": "Seek merupakan aplikasi ID yang membantu siapapun untuk belajar tentang spesies di sekitar mereka",
     "seek_bullet_1": "Pengamatan Seek disimpan di perangkatmu",
-    "seek_bullet_2": "Informasi pribadi yang dapat diidentifikasi tidak diambil dari pengguna yang telah keluar",
+    "seek_bullet_2": "Informasi pribadi yang dapat diidentifikasi dari pengguna yang telah keluar tidak disimpan",
     "seek_bullet_3": "Identifikasi tidak keluar dari perangkatmu atau memerlukan internet untuk bisa berjalan, tetapi tidak akan dikonfirmasi oleh komunitas iNaturalist",
     "your_obs_could_make_difference": "PENGAMATANMU DAPAT MEMBUAT PERBEDAAN",
-    "everyday_obs_help_scientists": "Setiap pengamatan yang dibuat oleh naturalis sepertimu dapat menolong ilmuwan mempelajari di mana dan kapan suatu organisme bisa ditemukan, bahkan dapat mengarah kepada penemuan-penemuan baru!",
+    "everyday_obs_help_scientists": "Setiap pengamatan yang dibuat oleh naturalis sepertimu dapat menolong ilmuwan mempelajari di mana dan kapan suatu organisme bisa ditemukan. Pengamatan-pengamatan ini bahkan dapat mengarahkan mereka kepada penemuan-penemuan baru!",
     "faqs": "FAQ",
     "faq_1": "Kamu harus berumur 13+ atau mendapatkan izin orang tua untuk membuat akun iNaturalist",
     "faq_2": "Seek dan iNaturalist menggunakan model identifikasi yang sama, tetapi hanya pengamatan iNaturalist yang dikonfirmasi oleh komunitas",
@@ -835,7 +835,7 @@
       "many": "{{count}} pengamatan diunggah ke iNaturalist melalui Seek",
       "other": "{{count}} pengamatan diunggah ke iNaturalist melalui Seek"
     },
-    "logged_in_bullet_1": "Kamu dapat mengunggah pengamatanmu ke iNaturalist dengan mengeklik 'Unggah Postingan ke iNaturalist' setelah kamu membuat pengamatan Seek",
+    "logged_in_bullet_1": "Kamu dapat mengunggah pengamatanmu ke iNaturalist dengan menekan 'Unggah Postingan ke iNaturalist' setelah kamu membuat pengamatan Seek",
     "logged_in_bullet_2": "Gunakan aplikasi atau situs web iNaturalist untuk membaca pemberitahuan tentang identifikasi, komentar, dan aktivitas lainnya pada pengamatanmu",
     "logged_in_bullet_3": "Pengamatan Seekmu TIDAK memiliki cadangan di iNaturalist. Menghapus Seek akan menghapus semua pengamatanmu di perangkatmu.",
     "upload_and_track_obs_using_inat": "Unggah dan lacak pengamatanmu dengan menggunakan aplikasi iNaturalist atau mengunjungi inaturalist.org.\n\nTerima kasih telah menjadi bagian dari komunitas ini!",
