New Crowdin updates (#412)
* New translations en.json (Chinese Traditional)

* New translations en.json (Ukrainian)

* New translations en.json (Polish)

* New translations en.json (Portuguese)

* New translations en.json (Russian)

* New translations en.json (Serbian (Cyrillic))

* New translations en.json (Swedish)

* New translations en.json (Turkish)

* New translations en.json (Chinese Simplified)

* New translations en.json (Dutch)

* New translations en.json (Vietnamese)

* New translations en.json (Portuguese, Brazilian)

* New translations en.json (Spanish, Mexico)

* New translations en.json (Hindi)

* New translations en.json (English, United States)

* New translations en.json (Welsh)

* New translations en.json (Sinhala)

* New translations en.json (Norwegian)

* New translations en.json (Korean)

* New translations en.json (Afrikaans)

* New translations en.json (Catalan)

* New translations en.json (Basque)

* New translations en.json (Indonesian)

* New translations en.json (Romanian)

* New translations en.json (French)

* New translations en.json (Spanish)

* New translations en.json (Arabic)

* New translations en.json (Czech)

* New translations en.json (Japanese)

* New translations en.json (Danish)

* New translations en.json (German)

* New translations en.json (Greek)

* New translations en.json (Finnish)

* New translations en.json (Hebrew)

* New translations en.json (Hungarian)

* New translations en.json (Italian)

* New translations en.json (Kannada)

* New translations en.json (Dutch)

* New translations en.json (Swedish)

* New translations en.json (Finnish)

* New translations en.json (Finnish)

* New translations en.json (Spanish)

* New translations en.json (Catalan)

--- a/translations/es.json
+++ b/translations/es.json
@@ -871,6 +871,10 @@
     "february_2022_challenge_name_life_on_edges": "Desafío de la Vida en los Límites",
     "february_2022_mission_1": "Encuentra 2 especies en estos grupos:\n\n-Clase Amphibia (Anfibios);\n-Ordena Charadriiformes (Limícolas y semejantes)",
     "february_2022_description_transitions_between_habitats": "Las zonas de transición entre hábitats pueden ser lugares emocionantes para buscar la vida salvaje, y algunas especies dependen de ellas. Los bordes de estanques, lagos, ríos y las zonas intermareales están llenos de vida. Muchas especies propias de estas zonas de frontera pueden vivir parte de su vida en agua y parte en tierra.",
-    "february_2022_action_which_species_excited": "¿Qué especie te ha hecho más ilusión encontrar? Basado en lo que observaste y en las investigaciones adicionales que hayas hecho, haz una lista de 3 cosas que necesita para sobrevivir y 3 cosas que crees que puedes hacer para proporcionar esas necesidades."
+    "february_2022_action_which_species_excited": "¿Qué especie te ha hecho más ilusión encontrar? Basado en lo que observaste y en las investigaciones adicionales que hayas hecho, haz una lista de 3 cosas que necesita para sobrevivir y 3 cosas que crees que puedes hacer para proporcionar esas necesidades.",
+    "march_2022_challenge_name_non_flowering_seed": "Desafío de plantas con semillas pero sin flores",
+    "march_2022_mission_1": "Encuentra 3 especies de plantas en estos grupos:\n\n-Clase Coníferas;\n-Clase Cicadas ;\n-Clase Ginkgoales",
+    "march_2022_description_reproduce_from_non_flowers": "Las coníferas, las cicas y los ginkgos se reproducen a partir de estructuras distintas a las flores. Las coníferas tienen conos y tanto las cicas como los ginkgos tienen estructuras parecidas al cono que liberan o reciben el polen. Muchas de estas especies sin flores son comúnmente cultivadas por su apariencia o productos madereros (en el caso de las coníferas).",
+    "march_2022_action_find_wild_or_intentional": "¿Has encontrado plantas silvestres o fueron plantadas intencionalmente por las personas? Si se han plantado, ¿qué características crees que la hacen interesantes para su plantación?"
   }
 }
