--- a/translations/nl.json
+++ b/translations/nl.json
@@ -871,6 +871,10 @@
     "february_2022_challenge_name_life_on_edges": "Het Leven op de Randen Uitdaging",
     "february_2022_mission_1": "Vind 2 soorten in deze groepen:\n\n-Klasse Amphibia (Amfibieën);\n-Orde Charadriiformes (Steltloperachtigen)",
     "february_2022_description_transitions_between_habitats": "Overgangen van het ene naar het andere habitat kunnen boeiend zijn voor het vinden van dieren en sommige soorten zijn daar van afhankelijk. De oevers van vijvers, meren, rivieren en de intergetijdenzones zitten vol met leven. Veel oeversoorten kunnen een deel van hun leven in water en een deel ervan op het land wonen.",
-    "february_2022_action_which_species_excited": "Over welke soorten was je het meest enthousiast toen je ze vond? Maak op basis van je waarnemingen en extra onderzoek daarnaar een lijst van 3 dingen die moet overleven en 3 dingen die je kunt doen om deze behoeften te ondersteunen."
+    "february_2022_action_which_species_excited": "Over welke soorten was je het meest enthousiast toen je ze vond? Maak op basis van je waarnemingen en extra onderzoek daarnaar een lijst van 3 dingen die moet overleven en 3 dingen die je kunt doen om deze behoeften te ondersteunen.",
+    "march_2022_challenge_name_non_flowering_seed": "Niet-Bloeiende Zaadplanten Uitdaging",
+    "march_2022_mission_1": "Vind 3 plantensoorten uit deze groepen:\n\n-Klasse Coniferen;\n-Klasse Palmvarens;\n-Klasse Ginkgo's",
+    "march_2022_description_reproduce_from_non_flowers": "Coniferen, palmvarens en ginkgo's reproduceren zich met andere organen dan bloemen. Coniferen hebben kegels en palmvarens en ginkgo's hebben kegelachtige structuren die pollen vrijgeven of ontvangen. Veel van deze bloemloze soorten worden vaak gecultiveerd voor hun uiterlijk of houtproducten (bij coniferen).",
+    "march_2022_action_find_wild_or_intentional": "Heb jij wilde planten gevonden of zijn ze opzettelijk door de mensen geplant? Als het is aangeplant, welke eigenschappen waren dan de reden volgens jou om het aan te planten?"
   }
 }
