--- a/translations/sv.json
+++ b/translations/sv.json
@@ -871,6 +871,10 @@
     "february_2022_challenge_name_life_on_edges": "Utmaning för livet på gränsen",
     "february_2022_mission_1": "Hitta 2 arter i dessa grupper:\n\n-Klass Amphibia (groddjur);\n-Ordning Charadriiformes (vadarfåglar)",
     "february_2022_description_transitions_between_habitats": "Övergångar mellan en typ av livsmiljö och en annan kan vara spännande platser att hitta djurliv, och vissa arter är beroende av dem. Gränser till dammar, sjöar, floder och tidvattenområden är fulla av liv. Många gränsarter kan leva en del av sitt liv i vatten och en del på land.",
-    "february_2022_action_which_species_excited": "Vilken art tyckte du var mest spännande att hitta? Utifrån det du observerat om den och ytterligare forskning om den, göra en lista med 3 saker som den behöver för att överleva och 3 saker du kan göra för att hjälpa med dessa behov."
+    "february_2022_action_which_species_excited": "Vilken art tyckte du var mest spännande att hitta? Utifrån det du observerat om den och ytterligare forskning om den, göra en lista med 3 saker som den behöver för att överleva och 3 saker du kan göra för att hjälpa med dessa behov.",
+    "march_2022_challenge_name_non_flowering_seed": "Icke-blommande fröväxtsutmaning",
+    "march_2022_mission_1": "Hitta 3 växtarter i dessa grupper:\n\n-Klass barrväxter;\n-Klass kottepalmer;\n-Klass ginkoväxter",
+    "march_2022_description_reproduce_from_non_flowers": "Barrväxter, kottepalmer och ginkgoväxter reproducerar alla med andra strukturer än blommor. Barrväxter har kottar och både kottepalmer och ginkgoväxter har kottliknande strukturer som släpper ut eller tar emot pollen. Många av dessa blomlösa arter odlas vanligen för sitt utseende eller virke (för barrväxter).",
+    "march_2022_action_find_wild_or_intentional": "Hittade du några vilda växter eller var de avsiktligt planterade av människor? Om de var planterade, vilka egenskaper tror du gjorde dem eftertraktade för plantering?"
   }
 }
