--- a/translations/pt-BR.json
+++ b/translations/pt-BR.json
@@ -871,6 +871,10 @@
     "february_2022_challenge_name_life_on_edges": "Life on the Edges Challenge",
     "february_2022_mission_1": "Find 2 species in these groups:\n\n-Class Amphibia (Amphibians);\n-Order Charadriiformes (Shorebirds and Allies)",
     "february_2022_description_transitions_between_habitats": "Transitions between one kind of habitat and another can be exciting places to find wildlife, and some species rely on them. The edges of ponds, lakes, rivers, and the intertidal zones are full of life. Many edge species may live part of their life in water and part on land.",
-    "february_2022_action_which_species_excited": "Which species were you most excited to find? Based on what you observed about it and additional research about it, make a list of 3 things that it needs to survive and 3 things you can do to support those needs."
+    "february_2022_action_which_species_excited": "Which species were you most excited to find? Based on what you observed about it and additional research about it, make a list of 3 things that it needs to survive and 3 things you can do to support those needs.",
+    "march_2022_challenge_name_non_flowering_seed": "Non-Flowering Seed Plants Challenge",
+    "march_2022_mission_1": "Find 3 plant species in these groups:\n\n-Class Conifers;\n-Class Cycads;\n-Class Ginkgos",
+    "march_2022_description_reproduce_from_non_flowers": "Conifers, cycads, and ginkgos all reproduce from structures other than flowers. Conifers have cones and both cycads and ginkgos have cone-like structures that release or receive pollen. Many of these flowerless species are commonly cultivated for their appearance or wood products (for conifers).",
+    "march_2022_action_find_wild_or_intentional": "Did you find wild plants, or were they intentionally planted by people? If it was planted, what characteristics do you think made it desirable for planting?"
   }
 }
