Add april challenge text

--- a/translations/en.json
+++ b/translations/en.json
@@ -875,6 +875,11 @@
     "march_2022_challenge_name_non_flowering_seed": "Non-Flowering Seed Plants Challenge",
     "march_2022_mission_1": "Find 3 plant species in these groups:\n\n-Class Conifers;\n-Class Cycads;\n-Class Ginkgos",
     "march_2022_description_reproduce_from_non_flowers": "Conifers, cycads, and ginkgos all reproduce from structures other than flowers. Conifers have cones and both cycads and ginkgos have cone-like structures that release or receive pollen. Many of these flowerless species are commonly cultivated for their appearance or wood products (for conifers).",
-    "march_2022_action_find_wild_or_intentional": "Did you find wild plants, or were they intentionally planted by people? If it was planted, what characteristics do you think made it desirable for planting?"
+    "march_2022_action_find_wild_or_intentional": "Did you find wild plants, or were they intentionally planted by people? If it was planted, what characteristics do you think made it desirable for planting?",
+    "april_2022_challenge_name_wildflower": "Wildflower Challenge",
+    "april_2022_mission_1": "Find 10 species of flowering plants (Subphylum Angiospermae)",
+    "april_2022_description_many_flowers_have_colors_shapes": "Many flowers have colors and shapes that attract insects to visit the flowers. Flowers produce pollen that can be transferred from one flower to another by animals, wind, or water.",
+    "april_2022_action_pollen_visible_anther": "Sometimes pollen is visible on the anther of the flower. If you touch your finger to it, can you see pollen on your finger? What do you think pollinates this species?"
+ 
   }
 }
